# lophat

./: .gitignore  Cargo.toml  README.md  example.py  lophat.pyi  pylock.toml  pyproject.toml  timing_test.py
.github/workflows/: python.yml
docs/: conf.py  index.rst
examples/: main.py  timing.py
lophat-py/: .gitignore  Cargo.toml  README.md  build.sh  publish.sh  pyproject.toml
lophat-py/src/: lib.rs
scripts/: build.sh  publish.sh
src/: anti_transpose.rs  bindings.rs  column.rs  decomposition.rs  diagram.rs  indexing.rs  lib.rs  lock_free.rs  locking.rs  matrix.rs  options.rs
src/algorithms/: decomposition.rs  lock_free.rs  locking.rs  mod.rs  serial.rs
src/columns/: bit_set.rs  hybrid.rs  mod.rs  vec.rs
src/utils/: anti_transpose.rs  diagram.rs  file_format.rs  mod.rs
tests/: test_benchmark.py  test_correct_pairings.py
