[package]
name = "lophat"
version = "0.10.1"
edition = "2024"
license = "MIT"
description = "Lockfree Persistent Homology Algorithm Toolbox"
homepage = "https://github.com/tomchaplin/lophat"
repository = "https://github.com/tomchaplin/lophat"
readme = "README.md"
exclude = ["scripts/**/*", "docs/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lophat"
crate-type = ["lib", "cdylib"]

[dependencies]
bit-set = "0.8"
# hashbrown = { version = "0.13.2", features = ["rayon"] }
pinboard = "2.2.0"
pyo3 = { version = "0.25.1", features = ["extension-module"], optional=true }
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"], optional=true }

[features]
default = ["python", "local_thread_pool", "serde"]
python = ["dep:pyo3"]
local_thread_pool = []
serde = ["dep:serde"]

[dev-dependencies]
ciborium = "0.2.0"
proptest = "1.1.0"
