[build-system]
requires = ["maturin~=1.9.0"]
build-backend = "maturin"

[project]
name = "lophat"
requires-python = ">=3.10"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
