[package]
name = "lophat-py"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lophat"
crate-type = ["cdylib"]

[dependencies]
lophat = { path = ".." }
pyo3 = { version = "0.18.0", features = ["extension-module"] }
